# VINS_Honor

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/libs/vins_kernel/: CMakeLists.txt  Camera.cc  Camera.h  CameraFactory.cc  CameraFactory.h  Parameters.cc  Parameters.h  PinholeCamera.cc  PinholeCamera.h  draw_result.cc  draw_result.h  estimator.cc  estimator.h  feature_manager.cc  feature_manager.h  feature_tracker.cc  feature_tracker.h  imu_factor.h  initial_aligment.cc  initial_alignment.h  initial_ex_rotation.cc  initial_ex_rotation.h  initial_sfm.cc  initial_sfm.h  integration_base.h  marginalization_factor.cc  marginalization_factor.h  projection_factor.cc  projection_factor.h  projection_td_factor.cc  projection_td_factor.h  solve_5pts.cc  solve_5pts.h  utility.cc  utility.h
app/src/main/: AndroidManifest.xml  icon_vins.xml
app/src/main/cpp/ndk/: native-lib.cc
app/src/main/cpp/vins_system/: CMakeLists.txt  system.cc  system.h
app/src/main/java/vins_honor/mono/: MainActivity.java  NDKHelper.java
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
